--- a/index.html
+++ b/index.html
@@ -82,10 +82,10 @@
       </section>
       <section class="section-imgs">
         <h1>Como contratar?</h1>
-        <img src="contrat-1.png" alt="" srcset="" >
-        <img src="contrat-2.png" alt="" srcset="" >
-        <img src="contrat-3.png" alt="" srcset="" >
-        <img src="contrat-4.png" alt="" srcset="" >
+        <img src="contrat-1.png" alt="" srcset="" />
+        <img src="contrat-2.png" alt="" srcset="" />
+        <img src="contrat-3.png" alt="" srcset="" />
+        <img src="contrat-4.png" alt="" srcset="" />
       </section>
       <section class="section-3">
         <h1>Perguntas Frequentes!</h1>
@@ -108,136 +108,125 @@
           <div class="section-3-card" onclick="handleCard(2)">
             <h3>
               <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
+                É possível efetuar a contratação a qualquer momento? Existe
+                algum período no qual a contratação fica suspensa?
               </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-2">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Existe um período de 09 (nove) dias úteis que antecede o primeiro
+              dia útil do mês de aniversário do cliente no qual as contratações
+              ficam suspensas devido à indisponibilidade do sistema do FGTS.
+              Exemplo: caso o cliente faça aniversário no mês de maio e o
+              primeiro dia útil do mês seja o dia 03/05 (segunda-feira), devido
+              a indisponibilidade do sistema, as contratações para esse cliente
+              estarão suspensas durante o período de 19/04 a 03/05.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(3)">
             <h3>
               <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
+                Qual o valor do FGTS que será bloqueado na contratação da
+                operação?
               </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-3">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Será bloqueado o valor correspondente ao percentual do(s) saldo(s)
+              da(s) conta(s) vinculada(s) do FGTS, em valor suficiente para,
+              aplicada a alíquota correspondente ao saldo da conta disponível na
+              data da operação e acrescida à parcela adicional, estabelecidas no
+              Anexo à Lei nº 8.036, de 1990, ou em suas alterações posteriores,
+              seja possível a realização do(s) saque(s) aniversário em valor
+              equivalente ao dado em garantia na contratação do empréstimo. O
+              bloqueio do(s) saldo(s) disponível(is) na(s) conta(s) vinculada(s)
+              do trabalhador como garantia do empréstimo está limitado ao valor
+              do(s) saldo(s) disponível(is) na(s) conta(s) vinculada(s) na data
+              da operação, descontados outros bloqueios realizados previamente.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(4)">
             <h3>
-              <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
-              </span>
+              <span> Como é feita a amortização do empréstimo? </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-4">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              A amortização do empréstimo será feita anualmente, mediante o
+              débito dos recursos (disponíveis e bloqueados) da conta vinculada
+              do FGTS no dia da disponibilização pela sistemática do Saque
+              Aniversário, não incidindo em pagamentos mensais.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(5)">
             <h3>
               <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
+                Posso alterar a modalidade de saque aniversário para saque
+                rescisão depois da contratação do produto?
               </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-5">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Caso tenha sido contratado empréstimo com garantia do Saque
+              Aniversário do FGTS, a alteração da modalidade só pode ocorrer
+              após a liquidação de todas as parcelas.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(6)">
             <h3>
               <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
+                O empréstimo com garantia do Saque Aniversário do FGTS
+                compromete outras linhas de crédito? Consigo desbloquear meu
+                FGTS realizando uma liquidação antecipada?
               </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-6">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Não. Esta linha de crédito não compromete a contratação de outras
+              linhas de crédito e não depende de margem consignável.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(7)">
             <h3>
-              <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
-              </span>
+              <span> A empresa que trabalho precisa aprovar a operação? </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-7">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Não, a empresa que realiza os pagamentos em sua conta do FGTS não
+              possui qualquer vínculo com a contratação do empréstimo com
+              garantia do saque aniversário do FGTS.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(8)">
             <h3>
-              <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
-              </span>
+              <span> Por quanto tempo minha proposta fica válida? </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-8">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              ara garantirmos o cumprimento das condições apresentadas, a
+              proposta permanecerá vigente por até 1 dia útil após a sua
+              digitação. Após esse período, se não formalizada, a proposta será
+              cancelada automaticamente.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(9)">
             <h3>
               <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
+                Consigo desbloquear meu FGTS realizando uma liquidação
+                antecipada?
               </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-9">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              Sim, após a quitação do empréstimo o saldo do FGTS será liberado.
             </p>
           </div>
           <div class="section-3-card" onclick="handleCard(10)">
             <h3>
-              <span>
-                Quem está elegível para a contratação do empréstimo com garantia
-                de saque aniversário do FGTS?
-              </span>
+              <span> Qual a taxa de juros da operação? </span>
               <i class="fa-solid fa-chevron-up"></i>
             </h3>
             <p id="p-card-10">
-              Todo trabalhador que possua saldo disponível em conta(s)
-              vinculada(s) do FGTS (contas ativas e inativas), que tenha optado
-              pela modalidade do saque aniversário e que tenha autorizado o
-              Safra a consultar o saldo do saque aniversário disponível.
+              A taxa de juros pode variar de acordo com o canal de contratação.
             </p>
           </div>
         </div>
