--- a/index.html
+++ b/index.html
@@ -231,6 +231,14 @@
           </div>
         </div>
       </section>
+      <section class="section-5">
+        <h1>Alguns dos nossos parceiros</h1>
+        <div class="section-5-imgs">
+          <img src="bmg.png" alt="BMG" srcset="" />
+          <img src="mercantil.png" alt="Mercantil" srcset="" />
+          <img src="c6bank.png" alt="C6BANK" srcset="" />
+        </div>
+      </section>
     </main>
     <footer>
       <div class="footer-1">
