--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   ></script>
   <body>
     <header>
-      <img src="logo.png" alt="Logo" srcset="" width="200" />
+      <img src="logo.png" alt="Logo" srcset="" width="300" />
     </header>
     <main>
       <section class="section-1">
@@ -27,53 +27,55 @@
           </p>
           <p>Selecione a opção que você se encaixa, hoje:</p>
           <button>
-            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
             <span>Tenho saldo acima de R$ 500</span>
           </button>
           <button style="background-color: rgb(172, 114, 8)">
-            <i class="fa-brands fa-whatsapp"></i>
+            <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
             <span> Meu saldo é abaixo de R$ 500 </span>
           </button>
         </div>
-        <div class="section-1-div-img">
+        <div class="section-1-div-img" style="min-width: 10%">
           <img src="img-teste.png" width="250" alt="" srcset="" />
         </div>
       </section>
       <section class="section-2">
         <div class="section-2-cards">
           <div class="section-2-card">
-            <h2>Saque</h2>
-            <h2>Rápido</h2>
+            <h2>
+              Saque
+              <span style="color: green">Rápido</span>
+            </h2>
             <img src="card-1.png" alt="img" srcset="" width="150" />
             <h2>Em apenas algumas horas</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Sem consulta ao SPC e Serasa</h2>
+            <h2>Sem consulta ao <span style="color: green;">SPC e Serasa</span></h2>
             <img src="card-2.png" alt="img" srcset="" width="150" />
             <h2>Independe se você está negativado</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Processo online</h2>
+            <h2>Processo <span style="color: green;">online</span></h2>
             <img src="card-3.png" alt="img" srcset="" width="150" />
             <h2>Tudo é feito sem precisar sair de casa</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Sem parcelas</h2>
+            <h2>Sem <span style="color: green;">parcelas</span></h2>
             <img src="card-4.png" alt="img" srcset="" width="150" />
             <h2>Você não fica pagando parcelas mensais</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Saldo baixos</h2>
+            <h2>Saldo <span style="color: green;">baixos</span></h2>
             <img src="card-5.png" alt="img" srcset="" width="150" />
             <h2>Saldo no FGTS de apenas R$ 300</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Taxas baixas</h2>
+            <h2>Taxas <span style="color: green;">baixas</span></h2>
             <img src="card-6.png" alt="img" srcset="" width="150" />
             <h2>Consulte para saber mais sobre as taxas</h2>
           </div>
@@ -242,7 +244,7 @@
     </main>
     <footer>
       <div class="footer-1">
-        <img src="logo.png" alt="Logo" srcset="" width="200" />
+        <img src="logo.png" alt="Logo" srcset="" width="300" />
         <div>
           <a href="">
             <i class="fa-brands fa-whatsapp"></i>
