--- a/index.html
+++ b/index.html
@@ -26,14 +26,14 @@
             em alguns minutos.
           </p>
           <p>Selecione a opção que você se encaixa, hoje:</p>
-          <button>
+          <a href="https://linkss.app/fAyqi">
             <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
             <span>Tenho saldo acima de R$ 500</span>
-          </button>
-          <button style="background-color: rgb(172, 114, 8)">
+          </a>
+          <a href="https://linkss.app/fAyqi" style="background-color: rgb(172, 114, 8)">
             <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
             <span> Meu saldo é abaixo de R$ 500 </span>
-          </button>
+          </a>
         </div>
         <div class="section-1-div-img" style="min-width: 10%">
           <img src="img-teste.png" width="250" alt="" srcset="" />
@@ -80,7 +80,7 @@
             <h2>Consulte para saber mais sobre as taxas</h2>
           </div>
         </div>
-        <button>SIMULAR AGORA</button>
+        <a href="https://linkss.app/fAyqi">SIMULAR AGORA</a>
       </section>
       <section class="section-imgs">
         <h1>Como contratar?</h1>
@@ -246,17 +246,17 @@
       <div class="footer-1">
         <img src="logo.png" alt="Logo" srcset="" width="300" />
         <div>
-          <a href="">
+          <a href="https://linkss.app/fAyqi" target="_blank">
             <i class="fa-brands fa-whatsapp"></i>
             <span>(067) 98214-3134</span>
           </a>
           <a href="">
             <i class="fa-brands fa-facebook"></i>
-            <span>@creditoperfeito</span>
+            <span>@wj_promotora</span>
           </a>
           <a href="">
             <i class="fa-brands fa-instagram"></i>
-            <span>@creditoperfeito</span>
+            <span>@wj_promotora</span>
           </a>
         </div>
       </div>
@@ -266,29 +266,6 @@
           R SETE DE SETEMBRO, 335 - Complemento APT 108 - CENTRO - TERESINA - PI
           - CEP 64000-210
         </span>
-      </div>
-      <div class="linha-footer"></div>
-      <div class="footer-3">
-        <p>
-          Aviso legal <br />
-          A creditoperfeito.com.br não é uma financeira. Somos correspondente
-          bancário com 15 anos de atuação. Como correspondente bancário,
-          seguimos as diretrizes do Banco Central do Brasil, nos termos da
-          Resolução nº. 3.954, de 24 de fevereiro de 2011.
-        </p>
-        <p>
-          A Crédito Perfeito, ALERTA AOS CONSUMIDORES E CLIENTES E A QUEM POSSA
-          INTERESSAR, que não é exigido qualquer tipo de adiantamento/depósito
-          prévio ou antecipação de pagamentos, seja a que título for, não sendo
-          cobrado como, condição de contratação e antecipadamente, quaisquer
-          TAXAS DE ANÁLISE DE CADASTRO, TARIFAS, SEGUROS, IOF OU FIANÇAS,
-          tampouco outros valores antecipados sob diferentes títulos, SENDO QUE
-          E SE HOUVER QUALQUER TIPO DE SOLICITAÇÃO NESSE SENTIDO, SUSPEITE, POIS
-          VOCÊ PODE ESTAR SENDO VÍTIMA DE UM GOLPE, razão pela qual solicitamos,
-          se assim houver ou, em caso de dúvidas e/ou denúncias sobre tais
-          práticas, entre em contato conosco IMEDIATAMENTE para que possamos
-          orientá-lo da melhor forma.
-        </p>
       </div>
     </footer>
     <script src="index.js"></script>
