--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <img src="logo.png" alt="Logo" srcset="" width="300" />
     </header>
     <main>
-      <section class="section-1">
+      <section class="section-1" id="section-1">
         <div class="section-1-div">
           <h1>Saque seu FGTS em até 30 Minutos via PIX</h1>
           <p>O crédito perfeito para você usar como quiser*</p>
@@ -27,11 +27,14 @@
           </p>
           <p>Selecione a opção que você se encaixa, hoje:</p>
           <a href="https://linkss.app/fAyqi">
-            <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
+            <i class="fa-brands fa-whatsapp" style="font-size: 25px"></i>
             <span>Tenho saldo acima de R$ 500</span>
           </a>
-          <a href="https://linkss.app/fAyqi" style="background-color: rgb(172, 114, 8)">
-            <i class="fa-brands fa-whatsapp" style="font-size: 25px;"></i>
+          <a
+            href="SaldoMenor500.html"
+            style="background-color: rgb(172, 114, 8)"
+          >
+            <i class="fa-brands fa-whatsapp" style="font-size: 25px"></i>
             <span> Meu saldo é abaixo de R$ 500 </span>
           </a>
         </div>
@@ -51,36 +54,38 @@
           </div>
 
           <div class="section-2-card">
-            <h2>Sem consulta ao <span style="color: green;">SPC e Serasa</span></h2>
+            <h2>
+              Sem consulta ao <span style="color: green">SPC e Serasa</span>
+            </h2>
             <img src="card-2.png" alt="img" srcset="" width="150" />
             <h2>Independe se você está negativado</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Processo <span style="color: green;">online</span></h2>
+            <h2>Processo <span style="color: green">online</span></h2>
             <img src="card-3.png" alt="img" srcset="" width="150" />
             <h2>Tudo é feito sem precisar sair de casa</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Sem <span style="color: green;">parcelas</span></h2>
+            <h2>Sem <span style="color: green">parcelas</span></h2>
             <img src="card-4.png" alt="img" srcset="" width="150" />
             <h2>Você não fica pagando parcelas mensais</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Saldo <span style="color: green;">baixos</span></h2>
+            <h2>Saldo <span style="color: green">baixos</span></h2>
             <img src="card-5.png" alt="img" srcset="" width="150" />
             <h2>Saldo no FGTS de apenas R$ 300</h2>
           </div>
 
           <div class="section-2-card">
-            <h2>Taxas <span style="color: green;">baixas</span></h2>
+            <h2>Taxas <span style="color: green">baixas</span></h2>
             <img src="card-6.png" alt="img" srcset="" width="150" />
             <h2>Consulte para saber mais sobre as taxas</h2>
           </div>
         </div>
-        <a href="https://linkss.app/fAyqi">SIMULAR AGORA</a>
+        <a href="#section-1">SIMULAR AGORA</a>
       </section>
       <section class="section-imgs">
         <h1>Como contratar?</h1>
