--- a/index.html
+++ b/index.html
@@ -241,9 +241,12 @@
       <section class="section-5">
         <h1>Alguns dos nossos parceiros</h1>
         <div class="section-5-imgs">
-          <img src="bmg.png" alt="BMG" srcset="" />
-          <img src="mercantil.png" alt="Mercantil" srcset="" />
+          <img src="pan.png" alt="BMG" srcset="" />
+          <img src="bradesco.png" alt="Mercantil" srcset="" />
           <img src="c6bank.png" alt="C6BANK" srcset="" />
+          <img src="facta.png" alt="FACTA" srcset="" />
+          <img src="master.png" alt="Master" srcset="" />
+          <img src="itau.png" alt="Itau" srcset="" />
         </div>
       </section>
     </main>
